--- a/index.html
+++ b/index.html
@@ -3,29 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JJK Slot Machine</title>
+    <title>Lucky Me Lottery - LeBron Edition</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container my-5">
+        <h1 class="text-center mb-4">Lucky Me Lottery - LeBron Edition</h1>
 
-    <h1 class="title">JJK Slot Machine</h1>
-
-    <div class="slot-machine">
-        <div class="reel-container">
-            <div class="reel" id="reel1">?</div>
-            <div class="reel" id="reel2">?</div>
-            <div class="reel" id="reel3">?</div>
+        <div class="text-center mb-4">
+            <img src="OIP.jpeg" alt="LeBron James" class="img-fluid rounded-circle" style="width: 150px;">
+            <h3>Get ready for greatness, just like LeBron!</h3>
         </div>
-        <h2 id="message" class="message">Press Spin!</h2>
-        <button id="spinButton" class="spin-button">Spin 🎰</button>
-        <div>
-            <h3>Add Names:</h3>
-            <input type="text" id="nameInput" class="name-input" placeholder="Type a name and press Enter">
-            <ul id="nameList" class="name-list"></ul>
+
+        <!-- Input Section -->
+        <div class="input-section">
+            <input type="text" id="nameInput" class="form-control" placeholder="Enter your name like LeBron">
+            <button id="addNameButton" class="btn btn-primary my-2">Add Name</button>
+        </div>
+
+        <!-- Name List Section -->
+        <div class="list-section mt-3">
+            <h3>Names in the Game:</h3>
+            <ul id="nameList" class="list-group"></ul>
+        </div>
+
+        <!-- Random Name Section -->
+        <div class="random-name-section mt-4">
+            <h3>LeBron's Chosen One:</h3>
+            <div id="randomName" class="display-4 text-danger"></div>
+            <button id="selectRandomButton" class="btn btn-success my-2">Select Random Name</button>
         </div>
     </div>
 
     <script src="script.js"></script>
-
 </body>
 </html>
